# solottery

./: Anchor.toml
programs/solottery/: Cargo.toml
programs/solottery/src/: lib.rs
tests/: solottery.ts
